<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backdrop_blur_end">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/vertical_separation_margin">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/backdrop_image_desc"
            android:foreground="@drawable/backdrop_gradient"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="780:439"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/backdrop_w780_thor" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:contentDescription="@string/poster_image_desc"
            app:layout_constraintDimensionRatio="h,2:3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline"
            tools:srcCompat="@drawable/poster_w185_thor" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/details_view_margin"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/horizontal_separation_margin"
            android:fontFamily="@font/lato_bold"
            android:text="@string/sample_movie_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toStartOf="@+id/iv_fav_movie"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/iv_backdrop" />

        <ImageView
            android:id="@+id/iv_fav_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/details_view_margin"
            android:contentDescription="@string/fav_button"
            android:src="@drawable/ic_action_is_not_fav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />

        <ProgressBar
            android:id="@+id/pb_rating"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/ratings_progress_size"
            android:layout_height="@dimen/ratings_progress_size"
            android:layout_marginTop="@dimen/vertical_separation_margin"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/rating_circle"
            android:rotation="270"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_bias="0.25"
            tools:progress="86" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/sample_rating"
            android:textColor="@android:color/black"
            android:textSize="@dimen/rating_tv_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/pb_rating"
            app:layout_constraintEnd_toEndOf="@+id/pb_rating"
            app:layout_constraintStart_toStartOf="@+id/pb_rating"
            app:layout_constraintTop_toTopOf="@+id/pb_rating" />

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_view_margin"
            android:text="@string/rating_label"
            app:layout_constraintEnd_toEndOf="@id/pb_rating"
            app:layout_constraintStart_toStartOf="@id/pb_rating"
            app:layout_constraintTop_toBottomOf="@id/pb_rating" />


        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/vertical_separation_margin"
            android:textColor="@android:color/black"
            android:textSize="@dimen/rating_tv_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_rating"
            app:layout_constraintStart_toEndOf="@id/pb_rating"
            tools:text="@string/sample_release_date" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/rating_label"
            app:layout_constraintEnd_toEndOf="@id/tv_release_date"
            app:layout_constraintStart_toStartOf="@id/tv_release_date" />

        <include
            android:id="@+id/overview_card"
            layout="@layout/movie_overview_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/vertical_separation_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_poster" />

        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_separation_margin"
            android:text="@string/movie_trailers"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/movie_overview_headline"
            app:layout_constraintStart_toStartOf="@id/overview_card"
            app:layout_constraintTop_toBottomOf="@id/overview_card" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_view_margin"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trailers"
            tools:listitem="@layout/movie_trailer_card" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_separation_margin"
            android:text="@string/reviews"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/movie_overview_headline"
            app:layout_constraintStart_toStartOf="@id/overview_card"
            app:layout_constraintTop_toBottomOf="@id/rv_trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_view_margin"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/overview_card"
            app:layout_constraintStart_toStartOf="@id/overview_card"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews"
            tools:listitem="@layout/movie_review_card" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_action_back" />

        <View
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar_detail"
            app:layout_constraintVertical_bias="@dimen/top_content_vertical_bias" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>